# agent-bootstrap

./: .gitignore  README.md  __init__.py  ai_config.py  model_registry.py  model_tester.py  orchestrator.py  pyproject.toml  retrieval_middleware.py  setup.py  shared_signal_hub.py  smart_cost_router.py  telemetry.py
bandit/: __init__.py  strategy.py
cache/: __init__.py  provider_cache.py
key_format/: __init__.py  catalog.py  test_catalog.py
orchestrator/: __init__.py
policy/: __init__.py  contextual_bandit.py
providers/: __init__.py  anthropic_adapter.py  base.py  knowledge_loader.py  openai_adapter.py  openrouter_adapter.py  providers.yaml
resilience/: __init__.py  classifier.py  controller.py  guard.py  router.py
signals/: __init__.py  runtime_signal.py
skills/: __init__.py  adaptive_429.py  adaptive_429_v2.py  adaptive_429_v3.py  model_query.py  self_tune.py
