[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_bootstrap"
version = "2.1.119"
description = "Autonomous AI Infrastructure: key recognition, resilience, self-configuration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "PyYAML",
    "beautifulsoup4",
    "lxml",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/chenyuan35/agent-bootstrap"
Repository = "https://github.com/chenyuan35/agent-bootstrap.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_bootstrap*"]
